Fix spacing on desktop

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -101,6 +101,13 @@
   margin: 0;
 }
 
+.controls {
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 /* Portrait iPhone X */
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
   .chatbox {
@@ -114,8 +121,5 @@
   }
   .controls {
     width: 370px;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
   }
 }
